# advent2024-mborg-beerselector-poc

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
docs/: Class diagram.md
src/: Makefile  arduino.cpp  arduino.h  main.cpp
src/beer_selector/: app_info.h  beer_selector.cpp  beer_selector.h  booting_state.cpp  booting_state.h  rommon_state.cpp  rommon_state.h
src/beer_selector/cli/commands/: auth_credentials.cpp  auth_credentials.h
src/cli/cli/: cli_runner.cpp  cli_runner.h
src/cli/command/: command.cpp  command.h  exit_command.cpp  exit_command.h  help_command.cpp  help_command.h
src/cli/model/: cli_model.h
src/cli/model/rommon/: cli_parser_rommon_factory.cpp  cli_parser_rommon_factory.h
src/cli/model/shared/: cli_shared_parsers.cpp  (+1 more)
src/cli/parser/: argument.cpp  argument.h  argumented_command_parser.cpp  argumented_command_parser.h  argumented_parser_help_displayer.cpp  argumented_parser_help_displayer.h  exceptions.cpp  exceptions.h  parser.cpp  parser.h  parser_help_displayer.cpp  parser_help_displayer.h
src/ds/: application.h  base_application.cpp  base_application.h  base_state.cpp  base_state.h  cached_platform_object_factory.cpp  cached_platform_object_factory.h  configuration_loader.h  input_handler.h  os.h  output_handler.h  platform_object_factory.cpp  platform_object_factory.h  state.h
src/pc/: pc_configuration_loader.cpp  pc_configuration_loader.h  pc_input_handler.cpp  pc_input_handler.h  pc_object_factory.cpp  pc_object_factory.h  pc_os.cpp  pc_os.h  pc_output_handler.cpp  pc_output_handler.h
(+2 files in other folders)
